[gd_scene load_steps=11 format=3 uid="uid://c712guhbqpoho"]

[ext_resource type="Texture2D" uid="uid://flnxehy4ikm2" path="res://Levels/Jtad/Microgames/Kiss Kiss/sprite1.png" id="1_6cmv6"]
[ext_resource type="Texture2D" uid="uid://cadtuklxnuhd8" path="res://Levels/Jtad/Microgames/Kiss Kiss/sprite2.png" id="2_4iefh"]
[ext_resource type="Script" uid="uid://uqxvkqykrcks" path="res://Levels/Jtad/Microgames/Kiss Kiss/grabbable_fish.gd" id="3_6va0m"]
[ext_resource type="Texture2D" uid="uid://cqjp5bs5xapt2" path="res://Levels/Jtad/Microgames/Kiss Kiss/heart.png" id="4_0tts1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bdxqe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6cmv6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4iefh")
}],
"loop": true,
"name": &"win",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wo5oa"]
radius = 24.6

[sub_resource type="CircleShape2D" id="CircleShape2D_2w2pp"]
radius = 4.0

[sub_resource type="Gradient" id="Gradient_um8h8"]
colors = PackedColorArray(0.972378, 0, 0.431514, 1, 0, 0.329412, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_b4ycd"]
gradient = SubResource("Gradient_um8h8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qreld"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 125.45
initial_velocity_max = 232.98
scale_min = 0.0
scale_max = 0.2
color_ramp = SubResource("GradientTexture1D_b4ycd")
turbulence_enabled = true

[node name="GrabbableFish" type="AnimatedSprite2D"]
position = Vector2(181, 94)
sprite_frames = SubResource("SpriteFrames_bdxqe")
animation = &"win"
autoplay = "default"
script = ExtResource("3_6va0m")

[node name="Grab" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grab"]
position = Vector2(4, -3)
shape = SubResource("CircleShape2D_wo5oa")

[node name="Snoot" type="Area2D" parent="." groups=["snoot"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Snoot"]
position = Vector2(-20, 2)
shape = SubResource("CircleShape2D_2w2pp")
debug_color = Color(0.853041, 0.000823613, 0.892728, 0.42)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-20, 2)
emitting = false
amount = 12
process_material = SubResource("ParticleProcessMaterial_qreld")
texture = ExtResource("4_0tts1")
one_shot = true
explosiveness = 1.0

[connection signal="mouse_entered" from="Grab" to="." method="_on_grab_mouse_entered"]
[connection signal="mouse_exited" from="Grab" to="." method="_on_grab_mouse_exited"]
[connection signal="area_entered" from="Snoot" to="." method="_on_snoot_area_entered"]
